fix: replace default style of scrollbars for webkit browsers

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,18 @@ body {
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f0f0f0;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #8a8a8a;
+  }
 }
 
 code {
